# norman

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  norman.py
.devcontainer/: devcontainer.json
dockerfiles/: ubuntu-22.04.dockerfile  ubuntu-23.10.dockerfile  ubuntu-24.04.dockerfile
src/: BaseConfig.h  CMakeLists.txt  CallArg.cpp  CallArg.h  CommaOperator.cpp  CommaOperator.h  ConditionalOperator.cpp  ConditionalOperator.h  Config.cpp  Config.h  Context.cpp  Context.h  DoStmt.cpp  DoStmt.h  ForStmt.cpp  ForStmt.h  IfStmt.cpp  IfStmt.h  LAndOperator.cpp  LAndOperator.h  LOrOperator.cpp  LOrOperator.h  Normalise.cpp  Normalise.h  NormaliseExprTransform.cpp  Norman.cpp  Norman.h  ParenExpr.cpp  ParenExpr.h  ReturnStmt.cpp  ReturnStmt.h  StmtExpr.cpp  StmtExpr.h  StringLiteral.cpp  StringLiteral.h  SwitchStmt.cpp  SwitchStmt.h  TUFixup.cpp  TUFixup.h  WhileStmt.cpp  (+1 more)
src/check/: Label.cpp  Label.h  NakedBreak.cpp  NakedBreak.h  NakedCaseOrDefault.cpp  NakedCaseOrDefault.h  NakedContinue.cpp  NakedContinue.h  NullStmt.h  Reference.cpp  Reference.h  SimpleValue.h
src/checks/: Label.h  NakedBreak.cpp  NakedBreak.h  SimpleValue.h
src/transform/: CallArg.cpp  CallArg.h  CommaOperator.cpp  CommaOperator.h  ConditionalOperator.cpp  ConditionalOperator.h  DeclStmt.cpp  DeclStmt.h  DoStmt.cpp  DoStmt.h  ForStmt.cpp  ForStmt.h  IfStmt.cpp  IfStmt.h  LAndOperator.cpp  LAndOperator.h  LOrOperator.cpp  LOrOperator.h  ParenExpr.cpp  ParenExpr.h  ReturnStmt.cpp  ReturnStmt.h  StmtExpr.cpp  StmtExpr.h  StringLiteral.cpp  StringLiteral.h  SwitchStmt.cpp  SwitchStmt.h  UnaryExprOrTypeTraitExpr.cpp  UnaryExprOrTypeTraitExpr.h  VarDecl.cpp  VarDecl.h  WhileStmt.cpp  WhileStmt.h
src/util/: Log.h  UId.h  fmtlib_clang.h  fmtlib_llvm.h  frontend.h
src/util/Rewriting/: Assignment.h  Ast.h  Equal.h  FunctionCall.h  LogicalAnd.h  Not.h  Statements.h  While.h
src/utils/: FunctionFilter.h  NumberRange.h  Rewriting.h  UId.h  fmtlib_clang.h  fmtlib_llvm.h
src/utils/Rewriting/: Identifier.h  If.h  LogicalOr.h  NotEqual.h  VariableDeclaration.h
test/: CMakeLists.txt  runner.py  runner.sh
test/CommaOperator/: labelled.test  side-effect free.test  side-effect.test
test/CompoundStmt/: empty block 2.test  empty block.test  labelled empty block.test  nested block.test
test/ConditionalOperator/: basic.test  if 0.test  if 1.test  labelled.test
test/DoStmt/: do while 0 with break and continue.test  do while 0 with break.test  do while 0 with continue.test  do while 0.test  do while 1 with break.test  do while 1 with continue.test  do while 1.test  do while with break.test  do while with continue.test  do while with label.test  do while with naked case.test  do while.test
test/ForStmt/: continue.test  simple.test
test/IfStmt/: if 0 with label.test  if 0 with naked case.test  if 0.test  if 1.test  if swizzle name conflict.test  if swizzle twice.test  if swizzle.test  labelled if 0.test  swizzle name conflict.test  swizzle twice.test  swizzle.test
test/NullStmt/: basic.test  empty block.test  labelled.test
test/NullStmt/basic/: input.c
test/ReturnStmt/: simple.test  void.test
test/StmtExpr/: __extension__.test  in swizzle if with label.test  in swizzle if.test  void.test
test/UnaryExprOrTypeTraitExpr/: alignof char.test  sizeof char.test
test/VarDecl/: anonymous struct.test  attribute unused.test  implicitly sized array.test  multiple.test  self referential in function call.test  self referential.test  simple initializer.test  struct.test  unified struct declaration.test  untagged struct.test
test/VarDecls/: while 0 with label.test
test/WhileStmt/: while 0 with label.test  while 0.test
test/core/: file-level unified type- and vardecl copy.test  file-level unified typedef and typedecl.test  file-level unified typedef and untagged struct.test  file-level untagged struct.test  function selection 2.test  function selection.test  labelled empty block.test  multiple functions.test  nested block.test  nested-block.test  unused label.test
test/core/function selection/: config.json  expected.c
test/core/multiple functions/: expected.c  input.c
